fix: spacing, section in view, scroll to projects button when hiding list

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@
   }
 
   .space-bottom {
-    @apply pb-24 sm:pb-40;
+    @apply pb-32 sm:pb-40;
   }
 
   .grid-like-flex {
